--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
     <style>
       body {
-        background-image: url(гугл.jpg);
+        background-image: url("гугл.jpg");
         background-size: auto;
         background-repeat: no-repeat;
       }
