--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       luckyButton.addEventListener('click', (event) => {
         event.preventDefault();
         const searchUrl = 'https://www.google.com/search?q=';
-        window.location.href = `${searchUrl}&btnI=I%27m+Feeling+Lucky`;
+        window.location.href = `${searchUrl}&btnL=I%27m+Feeling+Lucky`;
       });
       
       imagesButton.addEventListener('click', (event) => {
